src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

*:not(code) {
  font-family: "Open Sans", "Lato", "Inter", sans-serif;
  text-rendering: optimizeLegibility;
}

* {
  box-sizing: border-box;
}

/* Styl body */

body {
  line-height: 1.5;
  font-size: 1rem;
  display: flex;
  flex-direction: column;
  width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
  position: relative;
  padding: 0;
  margin: 0;
  background-color: #fcfcfc;
}

/* Styl main */

main {
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  margin-top: 3rem;
  position: relative;
  flex: 1;
  flex-grow: 1;
}

main .wrapper {
  width: 55vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  gap: 1rem;
}

main .wrapper:has(aside) {
  flex-direction: row;
  align-items: start;
}

main .wrapper:has(aside) .rows {
  width: 100%;
  max-width: 80%;
  display: flex;
  flex-direction: column;
  position: relative;
  gap: 1rem;
}

main .wrapper .row {
  width: 100%;
  display: block;
}
main .wrapper .row.centered-text {
  text-align: center !important;
}

main .wrapper .row.narrow {
  width: 50%;
}

main .wrapper .row:has(.column) {
  display: flex;
  flex-direction: column;
  flex-direction: row;
  gap: 1rem;
}

main .wrapper .row .column {
  width: 100%;
  max-width: 100%;
  display: block;
}

/* Styl nav */

nav {
  width: 100vw;
  background-color: #fff;
  border-bottom: 2px solid rgba(0,0,0,0.1);
  padding: 0;
  margin: 0;
  display: flex;
  position: sticky;
  top: 0;
  z-index: 999;
  max-height: 4rem;
  height: 4rem;
  gap: 0.5rem;
}

nav .website-logo {
  display: flex;
  padding-left: 0.5rem;
  width: -moz-min-content;
  width: min-content;
}

nav .website-logo::after {
  content: "";
  display: block;
  height: 85%;
  transform: translateY(10%);
  width: 0.2rem;
  margin-left: 0.5rem;
  background-color: rgba(0, 0, 0, 0.15);
}

nav .website-logo img {
  padding: none;
  margin: none;
  display: block;
  height: calc(4rem - 2px);
  width: auto;
}

nav ul {
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 0;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
  list-style: none;
}

nav ul li img {
  padding: none;
  margin: none;
  display: block;
  height: calc(4rem - 2px);
  width: auto;
}

nav ul li a:has(img),nav ul li .nav-item:has(img) {
  display: flex;
  width: -moz-min-content;
  width: min-content;
  padding: 0 !important;
}

nav ul li a.square-img:has(img),nav ul li .nav-item.square-img:has(img) {
  width: 5rem !important;
}

nav ul li a.square-img img,nav ul li .nav-item.square-img img {
  width: 4rem !important;
  height: auto;
}

nav ul li a, nav ul li .nav-item {
  padding: 1rem;
  padding-top: calc(1rem + 2px);
  height: calc(100% + 2px);
  justify-content: center;
  align-items: center;
  display: flex;
  color: rgba(0,0,0,0.75);
  text-decoration: none !important;
  cursor: pointer;
  text-align: center;
  position: relative;
  border-bottom: 4px solid transparent;
}

nav ul li a.current,nav ul li .nav-item.current {
  font-weight: bold;
  color: #000;
  border-bottom: 4px solid #0052a5;
}

nav ul li a:hover, nav ul li .nav-item:hover {
  color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.03);
}

nav button.menu-collapse {
  width: 4rem !important;
  height: calc(4rem - 2px);
  background-color: rgba(0, 0, 0, 0.1);
  border: none;
  cursor: pointer;
  font-size: 2rem;
  color:rgba(0, 0, 0, 0.3);
  position: absolute;
  top: 0;
  right: 0;
  display: none;
}

/* Styl link */

a {
  color: #0052a5;
}

a:hover {
  text-decoration: underline;
  color: #003972;
}

/* Styl header */

h1,h2,h3,h4,h5,h6 {
  padding: 0;
  margin: 0.25rem 0;
  font-weight: 600;
}

/* Styl p */

p {
  margin: 0.5rem 0;
}

/* Styl hr */

hr {
  width: 100%;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: transparent;
  padding: 0;
  margin: 0.5rem 0;
}

/* Styl button */

.button {
  padding: 0.4rem 0.75rem;
  color: #0052a5;
  font-size: 1rem !important;
  border: 2px solid transparent;
  border-radius: 0.25rem;
  width: auto !important;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  gap: 0.5rem;
  text-align: center;
  background-color: transparent;
  text-decoration: none;
  background-color: #fff;
  line-height: 1.5;
  font-weight: 500;
}
.button.big {
  font-size: 1.5rem !important;
  border-radius: 0.5rem;
}
.button:disabled,.button.disabled {
  background-color: rgba(0, 0, 0, 0.2) !important;
  color: #000 !important;
  cursor: not-allowed;
  text-decoration: none !important;
}

.button.full-width {
  width: 100% !important;
}

.button:hover {
  text-decoration: underline !important;
  opacity: 0.9;
}

.button.primary {
  background-color: #0052a5;
  color: #ffffff;
}

.button.secondary {
  border-color: #0052a5 !important;
  background-color: #fff;
  color: #0052a5;
}

/* Styl table */

.table {
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
  border-radius: 0.25rem;
  border: 1px solid rgba(0,0,0,0.2);
}

.table.table-no-border {
  border: 1px solid transparent;
}

.table.table-no-border table tr * {
  border-right: none;
}

.table table {
  min-width: 100%;
  padding: 0;
  border-collapse: collapse;
  background-color: #fff;
}

.table table th {
  white-space: nowrap;
}

.table table th,.table table td {
  padding: 0.5rem 0.75rem;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  border-right: 1px solid rgba(0,0,0,0.2);
}

.table table tr:has(th + td) th {
  text-align: right;
  white-space: normal;
}

.table table tr:has(th + td) td {
  white-space: normal;
}

.table table,.table table tr:last-child td {
  border-bottom: none;
}
/* ... */

